Added dragon egg respawn and void souls