@@ -17,10 +17,7 @@ import net.minecraft.util.registry.RegistryKey;
 import net.minecraft.world.gen.GenerationStep;
 import net.minecraft.world.gen.YOffset;
 import net.minecraft.world.gen.feature.*;
-import net.minecraft.world.gen.placementmodifier.CountPlacementModifier;
-import net.minecraft.world.gen.placementmodifier.HeightRangePlacementModifier;
-import net.minecraft.world.gen.placementmodifier.PlacementModifier;
-import net.minecraft.world.gen.placementmodifier.SquarePlacementModifier;
+import net.minecraft.world.gen.placementmodifier.*;
 
 import java.util.Arrays;
 import java.util.List;
@@ -29,8 +26,9 @@ import java.util.function.Predicate;
 public class OreGeneration {
 
     static {
-        register(PBlocks.EMBERITE_ORE, BiomeSelectors.foundInTheNether(), OreConfiguredFeatures.NETHERRACK, 5, Arrays.asList(CountPlacementModifier.of(10), SquarePlacementModifier.of(), HeightRangePlacementModifier.uniform(YOffset.getBottom(), YOffset.fixed(128))));
-        register(PBlocks.VERUM_ORE, BiomeSelectors.foundInTheEnd(), new BlockMatchRuleTest(Blocks.END_STONE), 3, Arrays.asList(CountPlacementModifier.of(2), SquarePlacementModifier.of(), HeightRangePlacementModifier.trapezoid(YOffset.fixed(10), YOffset.fixed(20))));
+        register(PBlocks.EMBERITE_ORE, BiomeSelectors.foundInTheNether(), OreConfiguredFeatures.BASE_STONE_NETHER, 5, List.of(CountPlacementModifier.of(10), SquarePlacementModifier.of(), HeightRangePlacementModifier.uniform(YOffset.getBottom(), YOffset.fixed(128))));
+        register(PBlocks.VERUM_ORE, BiomeSelectors.foundInTheEnd(), new BlockMatchRuleTest(Blocks.END_STONE), 3, List.of(CountPlacementModifier.of(2), SquarePlacementModifier.of(), HeightRangePlacementModifier.trapezoid(YOffset.fixed(10), YOffset.fixed(20))));
+        register(Blocks.ANCIENT_DEBRIS, BiomeSelectors.foundInTheNether(), OreConfiguredFeatures.BASE_STONE_NETHER, 3, List.of(CountPlacementModifier.of(5), SquarePlacementModifier.of(), HeightRangePlacementModifier.uniform(YOffset.getBottom(), YOffset.fixed(128))));
     }
 
     public static ConfiguredFeature<?, ?> register(Block ore, Predicate<BiomeSelectionContext> biomeSelector, RuleTest oreRuleTest, int size, List<PlacementModifier> placementModifiers) {
